# spresense-rs

./: .gitignore  Cargo.toml  NOTICE  README.md  cxd5602.svd.patched  justfile  memory.x  patch.yml
cxd56-hal/: Cargo.toml
cxd56-hal/src/: delay.rs  gpio.rs  i2c.rs  lib.rs  uart.rs
cxd56-hal/src/clocks/: peripheral.rs  pmu.rs
cxd56-hal/src/multicore/: cpu.rs  mailbox.rs  mod.rs  spawn.rs  sph.rs
cxd56-pac/: Cargo.toml
cxd56-pac-chiptool/: Cargo.toml  device.x
cxd56-pac-chiptool/src/: ADDRCONV.rs  CISIF.rs  CPU_FIFO.rs  CRG.rs  DMAC1.rs  DMAC3.rs  GE2D.rs  GPIO0.rs  ROT.rs  SMP_RAM_CTRL.rs  SPH.rs  SPI0.rs  SPI4.rs  TOPREG.rs  TOPREG_SUB.rs  UART1.rs  UART2.rs  _vectors.rs  lib.rs
cxd56-pac-chiptool/src/ADDRCONV/: regs.rs
cxd56-pac-chiptool/src/CISIF/: regs.rs  vals.rs
cxd56-pac-chiptool/src/CPU_FIFO/: regs.rs  vals.rs
cxd56-pac-chiptool/src/CRG/: regs.rs  vals.rs
cxd56-pac-chiptool/src/DMAC1/: regs.rs  vals.rs
cxd56-pac-chiptool/src/DMAC3/: regs.rs  vals.rs
cxd56-pac-chiptool/src/GE2D/: regs.rs  vals.rs
cxd56-pac-svd2rust/: device.x
cxd56-pac-svd2rust/src/: addrconv.rs  cisif.rs  dmac1.rs  dmac3.rs  ge2d.rs  gpio0.rs  i2c0.rs  lib.rs  rtc0.rs  timer0.rs  topreg.rs  wdog.rs
cxd56-pac/src/: lib.rs
embassy-cxd56/src/: gpio.rs  lib.rs
examples/rust_blink/: Cargo.toml  build.rs
examples/rust_blink_bsp/: Cargo.toml
examples/rust_blink_bsp/src/: main.rs
examples/rust_blink_chiptool/: Cargo.toml  build.rs
examples/rust_hello_uart/: Cargo.toml
spresense-bsp/: Cargo.toml
spresense-bsp/src/: led.rs  lib.rs
spresense-flash-algorithm/: Cargo.toml  LICENSE-MIT
src/: lib.rs
svd/: cxd5602.svd.patched  patch.yml
tools/cargo-spresense-flash/: Cargo.toml
tools/cargo-spresense-flash/src/: main.rs
tools/mkspk/: Cargo.toml  NOTICE
tools/mkspk/src/: clefia.rs  lib.rs  main.rs  spk.rs
(+125 files in other folders)
