[package]
name = "rust_blink_bsp"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
cortex-m     = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt  = "0.7.5"
spresense-bsp = { path = "../../spresense-bsp", features = ["rt"] }
panic-halt   = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
