[package]
name = "mkspk"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust port of Sony's mkspk: pack an ELF into a Spresense SPK"
license = "MIT OR Apache-2.0"

[lib]
name = "mkspk"
path = "src/lib.rs"

[[bin]]
name = "mkspk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
object = { version = "0.36", default-features = false, features = ["read_core", "elf", "std"] }
